[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/card_pile.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/hand.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/cards_viewer.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/combat_screen.gd" type="Script" id=4]
[ext_resource path="res://imgs/test cards/red-dragon-flight-card--687005249.png" type="Texture" id=5]
[ext_resource path="res://scenes/enemies/enemy_base.tscn" type="PackedScene" id=6]
[ext_resource path="res://icon.png" type="Texture" id=7]
[ext_resource path="res://scenes/hp_bar.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/combat_manger.tscn" type="PackedScene" id=9]

[node name="combat_screen" type="Node2D"]
script = ExtResource( 4 )

[node name="hand" parent="." instance=ExtResource( 2 )]

[node name="card_pile" parent="." instance=ExtResource( 1 )]
position = Vector2( 11, 198 )
do_card_action_when_droped = false
card_viewer = NodePath("../cards_viewer")

[node name="cards_viewer" parent="." instance=ExtResource( 3 )]
visible = false

[node name="card_pile2" parent="." instance=ExtResource( 1 )]
position = Vector2( 234, 204 )
do_card_action_when_droped = false
card_viewer = NodePath("../cards_viewer")
click_do_action = "open_card_viewer"

[node name="card_pile3" parent="." instance=ExtResource( 1 )]
position = Vector2( 427, 57 )
show_top_card = true
card_viewer = NodePath("../cards_viewer")
click_do_action = "open_card_viewer"

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 512, 314 )
z_index = -1
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="enemy_base" parent="." instance=ExtResource( 6 )]
position = Vector2( 710, 203 )

[node name="enemy_base2" parent="." instance=ExtResource( 6 )]
position = Vector2( 871, 203 )

[node name="pass_turn_btn" type="TextureButton" parent="."]
margin_left = 111.0
margin_top = 89.0
margin_right = 175.0
margin_bottom = 153.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 7 )

[node name="player_hp" parent="." instance=ExtResource( 8 )]

[node name="combat_manger" parent="." instance=ExtResource( 9 )]

[connection signal="pressed" from="pass_turn_btn" to="." method="_on_pass_turn_btn_pressed"]
